--- a/09-useState/src/index.css
+++ b/09-useState/src/index.css
@@ -1,3 +1,20 @@
+*{
+    box-sizing: border-box;
+}
+html,body{
+    height: 100%;
+    width: 100%;
+}
+button{
+    padding: 10px 20px;
+    margin: 10px;
+    border: none;
+}
 h1{
-    /* background-color: lightgreen; */
+    background-color: gainsboro;
+    width: fit-content;
+    font-size: 100px;
+    padding: 10px 70px;
+    border-radius: 5px;
+    margin: 20px;
 }
